force-app/main/default/objects/Contact/fields/E2E_Symphony_Notify_action_updates_email__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Notify_action_updates_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify of actionable updates by e-mail</label>
    <type>Checkbox</type>
</CustomField>