force-app/main/default/objects/Contact/fields/E2E_Symphony_Notify_all_by_text__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Notify_all_by_text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify of all updates by text</label>
    <type>Checkbox</type>
</CustomField>