force-app/main/default/objects/Contact/recordTypes/symphony_Broker.recordType-meta.xml
<RecordType>
    <fullName>symphony_Broker</fullName>
    <active>true</active>
    <description>Used in the symphony POC for brokers.</description>
    <label>Symphony Broker</label>
</RecordType>