force-app/main/default/objects/Contact/recordTypes/Symphony_Contact.recordType-meta.xml
<RecordType>
    <fullName>Symphony_Contact</fullName>
    <active>true</active>
    <description>Used for the Symphony POC and requires very few fields.</description>
    <label>Symphony Contact</label>
</RecordType>